5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1573_996.log
== TEST (2019-03-11 14:59:20) 
-- CODE:
print(" ***** ")
print("* o o * ")
print("*  ^  * ")
print(" _ _ _ ")
print(" *****")
-- OUTPUT:
***** 
* o o * 
*  ^  * 
 _ _ _ 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:00:35) 
-- CODE:
print("  ***** ")
print("(* o o * )")
print(" *  ^  * ")
print("  - - -  ")
print("  *****")
-- OUTPUT:
***** 
(* o o * )
 *  ^  * 
  - - -  
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:00:57) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  * ")
print("  - - -  ")
print("  *****")
-- OUTPUT:
***** 
(* o o *)
 *  ^  * 
  - - -  
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:01:10) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  * ")
print("  - - -  ")
print("  *****")
-- EXECUTION TIME:
0.140123
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
 *  ^  * 
  - - -  
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:02:44) 
-- CODE:
print(" *****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" *****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:02:46) 
-- CODE:
print(" *****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print(" *****")
-- EXECUTION TIME:
0.141764
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
 *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:13:57) 
-- CODE:
print(*****)
print((*° °*))
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:13:59) 
-- CODE:
print(*****)
print((*° °*))
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:14:59) 
-- CODE:
print("*****")
print((*° °*))
print(* ^ *)
print(*---*)
print(*****)
-- ERROR:
File "XXXX", line 2
    print((*° °*))
            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:16:41) 
-- CODE:
print("*****")
print("(*° °*)")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*° °*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:17:04) 
-- CODE:
print("*****")
print("(*o o*)")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 12:17:30) 
-- CODE:
print("*****")
print("*o o*")
print("* ^ *")
print("*---*")
print("*****")
-- OUTPUT:
*****
*o o*
* ^ *
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
